--- a/src/templates/cadastros-gerais/hospitais.html
+++ b/src/templates/cadastros-gerais/hospitais.html
@@ -41,7 +41,7 @@
                     </p>
                 </div>
                 <div class="col-lg-12 kan-group">
-                    <button class="btn kan-btn-success d-inline-block mr-4" ng-click="openModalCadastroHospital()">
+                    <button class="btn kan-btn-success d-inline-block mr-4" ng-click="openModalCadastroHospital(null)">
                         <i class="fa fa-plus fa-1-x kan-icon-success text-light p-0" data-toggle="tooltip" data-placement="bottom" title="Cadastrar novo hospital."></i>
                         Cadastrar Hospital
                     </button>
@@ -71,7 +71,7 @@
                                 <span ng-show="!hospital.inativo">Não</span>
                             </td>
                             <td class="text-center">
-                                <i class="fa fa-pencil text-primary" aria-hidden="true" title="Editar dados do hospital" ng-click="updateHospital(hospital)"></i>
+                                <i class="fa fa-pencil text-primary" aria-hidden="true" title="Editar dados do hospital" ng-click="openModalCadastroHospital(hospital)"></i>
                                 <i ng-show="!hospital.inativo" class="fa fa-ban text-danger" aria-hidden="true" title="Inativar hospital" ng-click="inativarHospital(hospital)"></i>
                                 <i ng-show="hospital.inativo" class="fa fa-check text-success" aria-hidden="true" title="Ativar hospital" ng-click="ativarHospital(hospital)"></i>
                             </td>
