Editado título do modal de cadastro do hopital para ser dinamico - quando for cadastro aparece Cadastrar Hospital e quando for edição para Editar Hospital: x

--- a/src/templates/cadastros-gerais/cadastroHospital.html
+++ b/src/templates/cadastros-gerais/cadastroHospital.html
@@ -2,7 +2,7 @@
     <div class="kan-row-modal">
         <!-- PACIENTE -->
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-            <h5 class="kan-title">Cadastrar Hospital
+            <h5 class="kan-title">{{title}}
                 <i class="fa fa-info fa-1-x kan-icon-info" data-toggle="tooltip" data-placement="bottom" title="Tela para cadastrar um novo hospital"></i>
             </h5>
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 kan-group">
