--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -87,9 +87,9 @@
                             </a>
                         </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Isolamentos">
-                            <a class="nav-link" ui-sref="isolamentos">
+                            <a class="nav-link" ui-sref="tiposIsolamentos">
                                 <span class="nav-link-text">
-                                    Tipos Isolamentos
+                                    Tipos de Isolamentos
                                 </span>
                             </a>
                         </li>
