--- a/src/templates/relatorios/todasInternacoes.html
+++ b/src/templates/relatorios/todasInternacoes.html
@@ -36,7 +36,27 @@
                         <strong>mais de 24 horas</strong>
                     </span>
                 </p>
-                <input id="search" class="col-md-6 form-control form-control-sm" type="text" ng-model="search" placeholder="Digite para pesquisar">
+                <div class="col-lg-12 kan-group">
+                    <input id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
+                        ng-model="searchAla" placeholder="Ala">
+                    <input id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
+                        ng-model="searchDiagnostico" placeholder="Diagnóstico">
+                    <input id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
+                        ng-model="searchPaciente" placeholder="Nome do Paciente">
+                    <input id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
+                        ng-model="searchAdmissao" placeholder="Data de Admissão">
+                    <select id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
+                        ng-model="searchTempoEspera" placeholder="Tempo de Espera">
+                        <option value="">Selecione</option>
+                        <option value="menos12">Menos de 12 horas</option>
+                        <option value="mais12">Mais de 12 horas</option>
+                        <option value="mais24">Mais de 24 horas</option>
+                    </select>
+                    <button class="btn kan-btn-success">
+                        <i class="fa fa-search fa-1-x kan-icon-success text-light p-0" data-toggle="tooltip" data-placement="bottom" title="Filtrar pesquisa."></i>
+                        Filtrar pesquisa
+                    </button>
+                </div>
             </div>
             <div class="table-responsive">
                 <table class="table table-bordered table-hover table-sm">
@@ -45,22 +65,21 @@
                             <th class="text-center">Ala</th>
                             <th class="text-center">Médico</th>
                             <th class="text-center">Residente</th>
-                            <th class="text-center">Previsão Alta</th>
+                            <th class="text-center">Prev. Alta</th>
                             <th class="text-center">Leito</th>
                             <th class="text-center">Prontuário</th>
                             <th class="text-center">Nome</th>
-                            <th class="text-center">Data Nascimento</th>
+                            <th class="text-center">Data Nasc</th>
                             <th class="text-center">Idade</th>
                             <th class="text-center">Sexo</th>
-                            <th class="text-center">Data Admissão</th>
+                            <th class="text-center">Admissão</th>
                             <th class="text-center">Dias Internados</th>
                             <th class="text-center">Diagnóstico</th>
                             <th class="text-center">Pendências</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="pedido in listaPedidos  | filter : search | orderBy: 'dataAdmissao'" 
-                            ng-class="{ 'table-success' : pedido.tempo.dias < 1 && pedido.tempo.horas < 12, 
+                        <tr ng-repeat="pedido in listaPedidos  | filter : search | orderBy: 'dataAdmissao'" ng-class="{ 'table-success' : pedido.tempo.dias < 1 && pedido.tempo.horas < 12, 
                                         'table-warning' : pedido.tempo.dias < 1 && pedido.tempo.horas >= 12,
                                         'table-danger'  : pedido.tempo.dias >= 1 }">
                             <td title="{{pedido.ala.nomeAla}}">{{pedido.ala.nomeAla}}</td>
