campo sexo corrigido para seguir o layout

--- a/src/templates/internacao/pedidoInternacao.html
+++ b/src/templates/internacao/pedidoInternacao.html
@@ -40,7 +40,7 @@
                     value="">
             </div>
 
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6  kan-group">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
                 <label for="idade">Idade
                     <b class="text-danger">*</b>
                 </label>
@@ -54,18 +54,18 @@
                 <input disabled class="form-control form-control-sm" type="text" ng-model="pedidoInternacao.paciente.nomeMae">
             </div>
 
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6  kan-group">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 kan-group">
                 <label>Sexo</label>
                 <b class="text-danger">*</b>
                 <span class="clearfix"></span>
-                <label class="custom-control custom-radio">
+                <label class="col-lg-5 col-xl-5 custom-control custom-radio">
                     <input disabled id="feminino" name="genero" type="radio" class="custom-control-input ml-4 ng-pristine ng-untouched ng-valid ng-empty"
                         ng-model="pedidoInternacao.paciente.genero" ng-value="'Masculino'" value="Masculino">
                     <span class="custom-control-indicator p-3"></span>
                     <span for="feminino" class="custom-control-description ml-4 mt-2">Masculino</span>
                 </label>
 
-                <label class="custom-control custom-radio">
+                <label class="col-lg-5 col-xl-5 custom-control custom-radio">
                     <input disabled id="masculino" name="genero" type="radio" class="custom-control-input ml-4 ng-pristine ng-untouched ng-valid ng-empty"
                         ng-model="pedidoInternacao.paciente.genero" ng-value="'Feminino'" value="Feminino">
                     <span class="custom-control-indicator p-3"></span>
