--- a/src/templates/relatorios/todasInternacoes.html
+++ b/src/templates/relatorios/todasInternacoes.html
@@ -1,4 +1,4 @@
-<div ng-controller="ModalPesquisaPedidoInternacaoController" ng-init="carregarPedidos()">
+<div ng-controller="InternacoesController" ng-init="carregarPedidos()">
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <span>Relatórios</span>
