Criado funcionalidade para edição do hospital

--- a/src/templates/cadastros-gerais/cadastroHospital.html
+++ b/src/templates/cadastros-gerais/cadastroHospital.html
@@ -124,7 +124,7 @@
         </fieldset>
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 button-kan-row">
             <button type="button" class="btn kan-btn-danger" ng-click="cancelar();closeThisDialog(false)">Cancelar</button>
-            <button type="button" class="btn kan-btn-success" ng-click="cadastrarHospital()">Salvar Hospital</button>
+            <button type="button" class="btn kan-btn-success" ng-click="hospital.atualizar ? updateHospital() : cadastrarHospital()">Salvar Hospital</button>
         </div>
     </div>
 </div>
