Criado funcionalidade para edição do tipo de isolamento

--- a/src/templates/cadastros-gerais/cadastroTipoIsolamento.html
+++ b/src/templates/cadastros-gerais/cadastroTipoIsolamento.html
@@ -30,7 +30,7 @@
         </fieldset>
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 button-kan-row">
             <button type="button" class="btn kan-btn-danger" ng-click="closeThisDialog(false)">Cancelar</button>
-            <button type="button" class="btn kan-btn-success" ng-click="cadastrarIsolamento()">Salvar Isolamento</button>
+            <button type="button" class="btn kan-btn-success" ng-click="isolamento.atualizar ? updateIsolamento() : cadastrarIsolamento()">Salvar Isolamento</button>
         </div>
     </div>
 </div>
