Criado tela para finalização de internação e controller com chamada dos métodos.

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -53,6 +53,13 @@
                                 </span>
                             </a>
                         </li>
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Finalizar Internação">
+                            <a class="nav-link" ui-sref="finalizacaoInternacao">
+                                <span class="nav-link-text">
+                                    Finalizar Internação
+                                </span>
+                            </a>
+                        </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Pedidos de Internação em Aberto">
                             <a class="nav-link" ui-sref="relatorioPedidosEmAberto">
                                 <span class="nav-link-text">
