--- a/src/templates/relatorios/pedidoInternacaoEmAberto.html
+++ b/src/templates/relatorios/pedidoInternacaoEmAberto.html
@@ -36,29 +36,11 @@
                         <strong>mais de 24 horas</strong>
                     </span>
                 </p>
-                <div class="col-lg-12 kan-group">
-                    <input id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
-                        ng-model="searchAla" placeholder="Ala">
-                    <input id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
-                        ng-model="searchDiagnostico" placeholder="Diagnóstico">
-                    <input id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
-                        ng-model="searchPaciente" placeholder="Nome do Paciente">
-                    <input id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
-                        ng-model="searchAdmissao" placeholder="Data de Admissão">
-                    <select id="search" class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2 kan-group form-control form-control-sm" type="text"
-                        ng-model="searchTempoEspera" placeholder="Tempo de Espera">
-                        <option value="">Selecione</option>
-                        <option value="menos12">Menos de 12 horas</option>
-                        <option value="mais12">Mais de 12 horas</option>
-                        <option value="mais24">Mais de 24 horas</option>
-                    </select>
-                    <button class="btn kan-btn-success">
-                        <i class="fa fa-search fa-1-x kan-icon-success text-light p-0" data-toggle="tooltip" data-placement="bottom" title="Filtrar pesquisa."></i>
-                        Filtrar pesquisa
-                    </button>
-                </div>
+               <filtros dadosFiltros="dadosFiltros"></filtros>
             </div>
-            <div class="table-responsive">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group table-responsive">
+                <h6 class="m-0">Dados do relatório</h6>
+                <hr class="mt-1 mb-2">
                 <table class="table table-bordered table-hover table-sm">
                     <thead>
                         <tr>
