Ajustado layout das tabelas / Adicionado filtro do tempo aguardando internação

--- a/src/resources/libs/css/kan.css
+++ b/src/resources/libs/css/kan.css
@@ -1,3 +1,10 @@
+.table-responsive{
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
 .ajax-spinner {
     position: absolute;
     top: 0;
