--- a/src/templates/filtros.html
+++ b/src/templates/filtros.html
@@ -38,17 +38,17 @@
         <input type="number" class="form-control form-control-sm" ng-model="model.numProntuario">
     </div>
     <div class="col-12 col-sm-12 col-md-2 col-lg-2 col-xl-2 kan-group">
-        <label>Data de Admissão
+        <label>Data Admissão
         </label>
         <input type="datetime-local" class="form-control form-control-sm" ng-model="model.dataAdmissao">
     </div>
     <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 kan-group">
-        <label>Classificação Tempo Espera
+        <label>Tempo Aguardando
         </label>
         <select ng-model="model.classificacaoTempoEspera" class="form-control form-control-sm">
-            <option value="">Todas</option>
-            <option value="verde" class="text-success">Menos de 12 horas</option>
-            <option value="amarelo" class="text-warning">Até 24 horas</option>
+            <option value="">Sem filtro</option>
+            <option value="verde" class="text-success">Abaixo de 12 horas</option>
+            <option value="amarelo" class="text-warning">De 12 a 24 horas</option>
             <option value="vermelho" class="text-danger">Acima de 24 horas</option>
         </select>
     </div>
