--- a/src/templates/relatorios/pedidoInternacaoEmAberto.html
+++ b/src/templates/relatorios/pedidoInternacaoEmAberto.html
@@ -4,14 +4,14 @@
             <span>Relatórios</span>
         </li>
         <li class="breadcrumb-item active">
-            <span> Pedidos em Aberto</span>
+            <span>Lista de Pedidos de Internação</span>
         </li>
     </ol>
 
     <div class="kan-row">
         <fieldset class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 kan-group">
-                <h5 class="kan-title">Lista com Pedidos de Internação
+                <h5 class="kan-title">Lista de Pedidos de Internação
                     <i class="fa fa-info fa-1-x kan-icon-success" data-toggle="tooltip" data-placement="bottom" title="Aqui você visualizará todos os pedidos de internação.
                     A primeira vez que a página é carregada será exibido todos os pedidos que estão com status pendente, ou seja, em aberto. 
                     Através dos campos abaixo você consegue filtrar os dados exibidos, para isso basta inserir as informações que deseja buscar e clicar no botão Pesquisar.">
