--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -63,13 +63,13 @@
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Pedidos de Internação em Aberto">
                             <a class="nav-link" ui-sref="relatorioPedidosEmAberto">
                                 <span class="nav-link-text">
-                                    Pedidos em Aberto
+                                    Lista de Pedidos de Internação
                                 </span>
                             </a>
                         </li>
                         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Relatório Registro de Todas Internações">
                             <a class="nav-link" ui-sref="relatorioTodasInternacoes">
-                                <span class="nav-link-text">Todas as Internações</span>
+                                <span class="nav-link-text">Lista de Registros de Internação</span>
                             </a>
                         </li> 
                     </ul>
